    - Fix file's repr with Windows paths
    - Fix urllib and urllib2 path handling on Windows
    - Fix r'\Jython25' not considered an abspath on Windows
    - Fix handling of raw unicode escapes
    - Fix mishandling of the bytecode's tagged mtime in zipimport and when
    recompiling due to stale bytecode
    - Fixed minor short term memory leaks in functions on some lists allocated
    inline

Jython 2.5.0 rc3
  Bugs fixed
    - [ 1344 ] setName semantics of threading.Thread different to CPython
    - Fixed JLine console on cygwin
    - [ 1348 ] muti-threaded issue, maybe threads cannot exit

Jython 2.5.0 a0 - rc2
  Bugs fixed (new numbering due to move to Roundup)
    - [ 1188 ] Patch against trunk to handle SecurityExceptions
    - [ 1271 ] Bean property accessors in derived class overide methods in base class
    - [ 1264 ] 'is not' test exhibits incorrect behaviour when wrapping Java objects
    - [ 1295 ] Setting a write-only bean property causes a NPE
    - [ 1272 ] ASTList ClassCastException
    - [ 1261 ] jython -c "import sys; sys.exit(1)" not giving correct exit code.
    - [ 1215 ] extra spaces in import statement break importing
    - [ 1126 ] ImportError raised for Java subpackages import
    - [ 1111 ] keyword arguments not supported on __import__
    - [ 1567212 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 1024 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 852818 ] Wrong error message when the second+ parameter to Java wrong
    - [ 1222877 ] duplicate keyword arguments
    - [ 1168 ] ast module not working
    - [ 1192 ] deserialization of Jython classes extending Java classes fails when called from Java
    - [ 1243 ] Running scripts from standalone jar with __run__.py broken
    - [ 1237 ] Asnycore does not seem to work in Jython 2.5 (b0 or b1)
    - [ 1257 ] Pickling (protocol 2) doesn't use overriden itervalues() on dict-derived classes